--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1092,5 +1092,37 @@ $dark-block-2: #2B2C2E;
     .ant-picker-dropdown .ant-picker-super-next-icon::before{
         border-color: #fff;
     }
-
+    .staking-card-block .title-block h4, .staking-card-block .title-block p, 
+    .staking-card-block .progress-sm-sec .dur-cover .dur-itm-block, 
+    .staking-card-block .timer-card-cover .timer-wrapper .time-col .timer-cnt, .staking-card-block .timer-card-cover .timer-wrapper .time-col .time-label, 
+    .staking-card-block .timer-card-cover .timer-wrapper .dot-seprator, .staking-card-block .progress-sm-sec h5, 
+    .staking-card-block .table-block-cover .table-card .tab-label, .staking-card-block .table-block-cover .table-card .tab-val, 
+     {
+        color: $primary-light;
+     }
+     .staking-card-block .timer-card-cover{
+        border-color: #1A1A1A;
+     }
+     .staking-card-block .progress-sm-sec .progress-col, 
+     .staking-card-block .table-block-cover .table-card, .staking-card-block .table-block-cover{
+        border-color: #1B1B1B;
+     }
+     .staking-card-block .timer-card-cover .timer-wrapper .time-col .timer-cnt{
+        border-color: #3A3A3A;
+        &.active{
+            background-color: #1F1F1F;
+        }
+     }
+     .staking-card-block{
+        border-color: #484848;
+        background-color: #000;
+     }
+     .staking-card-block .table-block-cover .table-card.expected-reward .info {
+        border-color: #ffffff63;
+        color: #ffffff63;
+    }
+    .staking-card-block .card-btm-sec .stake-btn.btn-border{
+        background-color: transparent;
+        color: #fff;
+    }
 }
