--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -740,5 +740,7 @@
   .theme-dark .staking-card-block .card-btm-sec .stake-btn.btn-border {
     background-color: transparent;
     color: #fff; }
+  .theme-dark .staking-card-block .table-block-cover .table-card .info img {
+    filter: none; }
 
 /*# sourceMappingURL=dark-theme.css.map */
