--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1125,4 +1125,7 @@ $dark-block-2: #2B2C2E;
         background-color: transparent;
         color: #fff;
     }
+    .staking-card-block .table-block-cover .table-card .info img{
+        filter: none;
+    }
 }
