--- a/css/staking.css
+++ b/css/staking.css
@@ -1337,5 +1337,28 @@
 
   .staking-card-block .card-btm-sec .stake-btn {
     width: calc(50% - 3px); } }
+.filter-wrapper .block-left {
+  max-width: 100%; }
+
+@media (max-width: 579px) {
+  .filter-wrapper {
+    padding: 13px 0; } }
+@media (max-width: 767px) {
+  .filter-nav-btn-wrapper.filter-nav-scroll {
+    overflow: hidden;
+    overflow-x: auto; }
+    .filter-nav-btn-wrapper.filter-nav-scroll .filter-nav-btn {
+      margin-right: 8px;
+      text-wrap: nowrap;
+      min-width: auto; }
+      .filter-nav-btn-wrapper.filter-nav-scroll .filter-nav-btn::after {
+        bottom: 0 !important; } }
+@media (max-width: 579px) {
+  .filter-nav-btn-wrapper.filter-nav-scroll .filter-nav-btn {
+    margin-right: 3px;
+    margin-bottom: 5px;
+    padding: 7px; }
+    .filter-nav-btn-wrapper.filter-nav-scroll .filter-nav-btn:last-child {
+      margin-right: 0; } }
 
 /*# sourceMappingURL=staking.css.map */
