--- a/css/staking.css
+++ b/css/staking.css
@@ -1385,7 +1385,8 @@
     background-image: url("../img/soon-bg-left.svg");
     background-repeat: no-repeat;
     background-position: left;
-    background-size: cover; }
+    background-size: cover;
+    background-position: calc(100% + 20px); }
   .welcome-stake-outer-new::after {
     content: '';
     position: absolute;
@@ -1417,7 +1418,8 @@
     top: 20px;
     font-style: italic;
     font-size: 14px;
-    z-index: 3; }
+    z-index: 3;
+    color: #fff; }
     .welcome-stake-outer-new .certic-block img {
       margin-left: 8px; }
   .welcome-stake-outer-new .content-block {
@@ -1439,12 +1441,14 @@
       font-weight: 600;
       display: flex;
       align-items: center;
-      margin-bottom: 15px; }
+      margin-bottom: 15px;
+      color: #fff; }
       .welcome-stake-outer-new .content-block h3 img {
         margin-right: 8px; }
     .welcome-stake-outer-new .content-block p {
       font-size: 16px;
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      color: #fff; }
 
 @media (max-width: 1679px) {
   .welcome-stake-outer-new .content-block h2 {
