--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -2024,3 +2024,20 @@
         font-size: 12px;
     }
 }
+.card-section-outer{
+    .pool-title{
+        padding-top: 5px;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 0;
+        @media(max-width:1679px){
+            font-size: 17px;
+        }
+        @media(max-width:1199px){
+            font-size: 16px;
+        }
+        @media(max-width:579px){
+            font-size: 15px;
+        }
+    }
+}
