--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -2030,6 +2030,8 @@
         font-size: 18px;
         font-weight: 600;
         margin-bottom: 0;
+        color: #2E4276;
+        margin-bottom: 10px;
         @media(max-width:1679px){
             font-size: 17px;
         }
