--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1128,4 +1128,8 @@ $dark-block-2: #2B2C2E;
     .staking-card-block .table-block-cover .table-card .info img{
         filter: none;
     }
+    
+    .card-section-outer .pool-title{
+        color: #fff;
+    }
 }
