--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -739,7 +739,7 @@
     color: #ffffff63; }
   .theme-dark .staking-card-block .card-btm-sec .stake-btn.btn-border {
     background-color: transparent;
-    color: #fff; }
+    color: #2966FF; }
   .theme-dark .staking-card-block .table-block-cover .table-card .info img {
     filter: none; }
   .theme-dark .card-section-outer .pool-title {
