--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1123,7 +1123,7 @@ $dark-block-2: #2B2C2E;
     }
     .staking-card-block .card-btm-sec .stake-btn.btn-border{
         background-color: transparent;
-        color: #fff;
+        color: $primary-blue;
     }
     .staking-card-block .table-block-cover .table-card .info img{
         filter: none;
