--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -1514,8 +1514,8 @@
                 opacity: .5;
             }
             &.btn-border{
-                color: #697f9b;
-                border: 1px solid #B6C3E5 !important;
+                color: $primary-blue;
+                border: 1px solid $primary-blue !important;
             }
         }
     }
